2014-05-27 03:26-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormInspectorsManager.m
	* Palettes/2Controls/GormMatrixAttributesInspector.h
	* Palettes/2Controls/GormMatrixAttributesInspector.m
	* Palettes/2Controls/GormNSMatrixInspector.gorm: Fix for bug #28646.

2014-05-27 03:15-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m: Fix bug #39072: add retain to prevent
	segmentation fault when renaming object in document view.

2014-05-26 19:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormObjCHeaderParser/OCIVarDecl.m
	* GormObjCHeaderParser/OCIVar.m: Fix for bug#30837.

2014-05-26 18:32-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormFormAttributesInspector.h
	* Palettes/2Controls/GormFormAttributesInspector.m
	* Palettes/2Controls/GormNSFormInspector.gorm: Accept patch on
	bug#38477 by Sergei Golovin. Allows user to modify the
	number of items in an NSForm using the inspector.

2014-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Palettes/2Controls/GormButtonAttributesInspector.h: Use NSButton
	instead of the non-existign NSSwitch.
	* GormCore/GormViewKnobs.m: Replace DPS calls. Only realloc
	rect lists if needed.
	* Plugins/Gorm/GormGormWrapperBuilder.m,
	* Palettes/2Controls/GormPopUpButtonAttributesInspector.m,
	* Palettes/2Controls/GormButtonEditor.m: Remove compiler warnings.

2014-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* GormCore/GormResourceManager.m,
	* GormCore/GormResource.m,
	* GormCore/GormOutlineView.m,
	* GormCore/GormObjectEditor.m,
	* GormCore/GormClassManager.m: Remove compiler warnings.

2014-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* GormInfo.plist: Don't clain to be able to write XIB files.

2013-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* GormCore/GormResourceManager.m (-resourcePasteboardTypes): Add
	IBMenuPboardType to work around menus not being draggable.

2013-11-04 10:03-EST Gregory John Casamento <greg.casamento@gmail.com>
